--- a/metadata.yaml
+++ b/metadata.yaml
@@ -32,5 +32,6 @@ subjects:
 - !lcsh 'Legends -- England -- Cornwall (County)'
 - !lcsh 'Cornwall (England : County) -- History'
 - !lcsh 'Cornwall (England : County) -- Biography'
+- GITenberg
 title: Cornish Characters and Strange Events
 url: http://www.gutenberg.org/ebooks/41775
